# BierBeurzenBorrel

./: .gitignore  README.md  bierbeursborrel.csv  bierbeursborrel.xlsx  borrel.py  drink.py  inventaris.txt  originele_borrelscript.py  pyproject.toml
