[tool.poetry]
name = "bierbeurzenborrel"
version = "0.1.0"
description = ""
authors = ["Tjibbe <tjibbe.gottmer@science.ru.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
